src/test/ui/borrowck/immutable-arg.stderr
error[E0384]: cannot assign twice to immutable variable `_x` (Ast)
  --> $DIR/immutable-arg.rs:4:5
   |
LL | fn foo(_x: u32) {
   |        -- first assignment to `_x`
LL |     _x = 4;
   |     ^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign to immutable argument `_x` (Mir)
  --> $DIR/immutable-arg.rs:4:5
   |
LL | fn foo(_x: u32) {
   |        -- help: make this binding mutable: `mut _x`
LL |     _x = 4;
   |     ^^^^^^ cannot assign to immutable argument

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0384`.
